--- a/css/media.css
+++ b/css/media.css
@@ -13,3 +13,16 @@
         width: 100%;
     }
 }
+
+@media (max-width: 375px) {
+    .why-us {
+        margin-bottom: 0;
+        padding: 3rem 0;
+        background-color: #222;
+    }
+
+    .steps {
+        margin-top: 3rem;
+        margin-bottom: 0;
+    }
+}
